--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^3.8.2",
     "nuxt-headlessui": "^1.1.4",
     "postcss": "^8.4.32",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.6",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
@@ -24,7 +25,13 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
-    "@maptiler/sdk": "^1.2.0"
+    "@maptiler/sdk": "^1.2.0",
+    "jquery": "^3.7.1",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
+    "slick-carousel": "^1.8.1",
+    "vue-slick-carousel": "^1.0.6",
+    "vue3-carousel-nuxt": "^1.1.0"
   },
   "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
   "version": "1.0.0",
